--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+          rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
+     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
         <symbol id="icon-menu" viewBox="0 0 32 32">
             <path d="M2 6h28v6h-28zM2 14h28v6h-28zM2 22h28v6h-28z"></path>
@@ -18,36 +20,52 @@
 
 
 <header class="Header">
-<div class="container">
-    <a class="Header-logo" href="">
-        <img src="img/site-logo.png" alt="">
-    </a>
+    <div class="container">
+        <a class="Header-logo" href="">
+            <img src="img/site-logo.png" alt="">
+        </a>
 
-    <button class="Header-switch button button-icon" type="button">
-        <svg class="icon icon-menu">
-            <use xlink:href="#icon-menu"></use>
-        </svg>
-    </button>
+        <button class="Header-switch button button-icon" type="button">
+            <svg class="icon icon-menu">
+                <use xlink:href="#icon-menu"></use>
+            </svg>
+        </button>
 
-    <div class="Header-menu">
-        <div class="Header-menu-user">
-            <a href="">Register</a>
-            <a href="">Sign In</a>
-        </div>
+        <div class="Header-menu">
+            <div class="Header-menu-user">
+                <a href="">Register</a>
+                <a href="">Sign In</a>
+            </div>
 
-        <a class="Header-menu-property button button-blue" href="">List your property</a>
-        <div class="Header-menu-helper">
-            <select>
-                <option value="en">En</option>
-            </select>
-            <select>
-                <option value="">UAH</option>
-            </select>
+            <a class="Header-menu-property button button-blue" href="">List your property</a>
+            <div class="Header-menu-helper">
+                <select>
+                    <option value="en">En</option>
+                </select>
+                <select>
+                    <option value="">UAH</option>
+                </select>
+            </div>
         </div>
     </div>
-</div>
 </header>
 
+<nav class="Navigation">
+    <div class="container">
+        <a class="Navigation-item" href="">Menu1</a>
+        <a class="Navigation-item" href="">Menu2</a>
+        <a class="Navigation-item" href="">Menu3</a>
+        <a class="Navigation-item" href="">Menu4</a>
+        <a class="Navigation-item" href="">Menu4</a>
+        <a class="Navigation-item" href="">Menu4</a>
+    </div>
+</nav>
+
+<main class="Main">
+    <section class="Showcase">
+        <h1>More deals than days in a year</h1>
+    </section>
+</main>
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/main.js"></script>
 
