Showcase has been implemented as a layout

--- a/index.html
+++ b/index.html
@@ -63,7 +63,39 @@
 
 <main class="Main">
     <section class="Showcase">
-        <h1>More deals than days in a year</h1>
+        <div class="container">
+            <h1>More deals than days in a year</h1>
+            <h3>From cosy country homes to funky city flats</h3>
+
+            <div class="Search">
+                <form class="Search-form" action="">
+                    <div>
+                        <div>
+                            <input type="text">
+                        </div>
+                        <small>Destination, property name or address</small>
+                    </div>
+                    <div>
+                        <div>
+                            <input type="date">
+                        </div>
+                        <small>When</small>
+                    </div>
+                    <div>
+                            <select name="" id="">
+                                <option value="">123</option>
+                            </select>
+                    </div>
+                    <div>
+                        <button type="button">
+                            Let's get started
+                        </button>
+                    </div>
+                    <div class="asd">Are you traveling for work?
+                    </div>
+                </form>
+            </div>
+        </div>
     </section>
 </main>
 <script src="js/jquery-3.5.1.min.js"></script>
