--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <symbol id="icon-arrow-bottom" viewbox="0 0 24 24"><title>arrow-bottom</title>
             <path d="M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z"></path>
         </symbol>
+        <symbol id="icon-check" viewbox="0 0 24 24"><title>check</title>
+            <path d="M9 16.172l10.594-10.594 1.406 1.406-12 12-5.578-5.578 1.406-1.406z"></path>
+        </symbol>
     </defs>
 </svg>
 
@@ -84,16 +87,16 @@
 
             <div class="Search">
                 <form class="Search-form" action="">
-                    <div>
+                    <div class="Search-form-item">
                         <div class="form-item">
                             <svg class="icon icon-pin_drop form-item-icon">
                                 <use xlink:href="#icon-pin_drop"></use>
                             </svg>
-                            <input class="text" type="text">
+                            <input class="text" type="text" placeholder="Location">
                         </div>
-                        <small>Destination, property name or address</small>
+                        <small class="form-description">Destination, property name or address</small>
                     </div>
-                    <div>
+                    <div class="Search-form-item">
                         <div class="form-item">
                             <svg class="icon icon-date_range form-item-icon">
                                 <use xlink:href="#icon-date_range"></use>
@@ -102,7 +105,7 @@
                         </div>
                         <small>When</small>
                     </div>
-                    <div>
+                    <div class="Search-form-item">
                         <div class="form-item">
                         <svg class="icon icon-person form-item-icon">
                             <use xlink:href="#icon-person"></use>
@@ -112,12 +115,23 @@
                             </select>
                         </div>
                     </div>
-                    <div>
-                        <button type="button">
+                    <div class="Search-form-item">
+                        <button class="button button-navy button-full" type="button">
                             Let's get started
                         </button>
-                    </div>
-                    <div class="asd">Are you traveling for work?
+                        <div class="for-work">
+                            <label class="form-checkbox">
+                                Are you traveling for work?
+
+                                <div class="checkbox">
+                                    <input type="checkbox">
+                                    <svg class="icon icon-check">
+                                        <use xlink:href="#icon-check"></use>
+                                    </svg>
+
+                                </div>
+                            </label>
+                        </div>
                     </div>
                 </form>
             </div>
