Mobile Screen is Complete for Search Bar

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 <main class="Main">
     <section class="Showcase">
         <div class="container">
-            <h1>More deals than days in a year</h1>
-            <h3>From cosy country homes to funky city flats</h3>
+            <h1 class="Showcase-title">More deals than days in a year</h1>
+            <h3 class="Showcase-subtitle" >From cosy country homes to funky city flats</h3>
 
             <div class="Search">
                 <form class="Search-form" action="">
@@ -115,7 +115,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="Search-form-item">
+                    <div class="Search-form-item Search-form-item-submit">
                         <button class="button button-navy button-full" type="button">
                             Let's get started
                         </button>
