Web Search Menu Appearance

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             </svg>
                             <input class="text" type="text" placeholder="Location">
                         </div>
-                        <small class="form-description">Destination, property name or address</small>
+                        <p class="form-description">Destination, property name or address</p>
                     </div>
                     <div class="Search-form-item">
                         <div class="form-item">
@@ -103,7 +103,7 @@
                             </svg>
                             <input class="text"  type="date">
                         </div>
-                        <small>When</small>
+                        <p class="form-description">When</p>
                     </div>
                     <div class="Search-form-item">
                         <div class="form-item">
