Position Search Bar

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="Showcase">
         <div class="container">
             <h1 class="Showcase-title">More deals than days in a year</h1>
-            <h3 class="Showcase-subtitle" >From cosy country homes to funky city flats</h3>
+            <h3 class="Showcase-subtitle">From cosy country homes to funky city flats</h3>
 
             <div class="Search">
                 <form class="Search-form" action="">
@@ -101,18 +101,23 @@
                             <svg class="icon icon-date_range form-item-icon">
                                 <use xlink:href="#icon-date_range"></use>
                             </svg>
-                            <input class="text"  type="date">
+                            <input class="text" type="date">
                         </div>
                         <p class="form-description">When</p>
                     </div>
                     <div class="Search-form-item">
                         <div class="form-item">
-                        <svg class="icon icon-person form-item-icon">
-                            <use xlink:href="#icon-person"></use>
-                        </svg>
-                            <select class="select" name="" id="">
-                                <option value="">123</option>
-                            </select>
+                            <svg class="icon icon-person form-item-icon">
+                                <use xlink:href="#icon-person"></use>
+                            </svg>
+                            <div class="select">
+                                <svg class="icon icon-arrow-bottom select-icon">
+                                    <use xlink:href="#icon-arrow-bottom"></use>
+                                </svg>
+                                <select>
+                                    <option value="">123</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
                     <div class="Search-form-item Search-form-item-submit">
