--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@
                     </div>
                 </form>
             </div>
+
+             <ul class="Showcase-shortlink">
+                <a href="">Find deals</a>
+                <a href="">Travel guides</a>
+                <a href="">How was your stay?</a>
+                <a href="">Holiday rentals</a>
+                <a href="">for Business</a>
+            </ul>
+
         </div>
     </section>
 </main>
