--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <svg class="icon icon-date_range form-item-icon">
                                 <use xlink:href="#icon-date_range"></use>
                             </svg>
-                            <input class="text" type="date">
+                            <input class="text" type="date" placeholder="mm/dd/yyyy">
                         </div>
                         <p class="form-description">When</p>
                     </div>
