--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
                 <a href="">for Business</a>
             </ul>
 
+            <div class="Showcase-store">
+                <a href="" class="Showcase-store-link apple">
+                    <img src="img/apple.svg" alt="">
+                </a>
+                <a href="" class="Showcase-store-link google">
+                    <img src="img/google.svg" alt="">
+                </a>
+            </div>
         </div>
     </section>
 </main>
