Set up Flickity Slider

--- a/index.html
+++ b/index.html
@@ -159,9 +159,22 @@
             </div>
         </div>
     </section>
+    <section class="Highlights">
+        <div class="container">
+            <div class="Highlights-slider">
+                <div class="Highlights-item">1</div>
+                <div class="Highlights-item">2</div>
+                <div class="Highlights-item">3</div>
+                <div class="Highlights-item">4</div>
+                <div class="Highlights-item">5</div>
+                <div class="Highlights-item">6</div>
+            </div>
+        </div>
+    </section>
 </main>
 
 <script src="js/jquery-3.5.1.min.js"></script>
+<script src="js/flickity.pkgd.min.js"></script>
 <script src="js/main.js"></script>
 
 </body>
